[gd_scene load_steps=11 format=3 uid="uid://bkuh771b331to"]

[ext_resource type="Script" path="res://scripts/game.gd" id="1_8qj7s"]
[ext_resource type="PackedScene" uid="uid://c6ylby60jwsqs" path="res://scenes/background.tscn" id="2_15gsg"]
[ext_resource type="PackedScene" uid="uid://bfxwepx6ivi53" path="res://scenes/score.tscn" id="4_03t58"]
[ext_resource type="Script" path="res://scripts/player.gd" id="4_4gk1h"]
[ext_resource type="Script" path="res://scripts/button_container.gd" id="5_4pbax"]
[ext_resource type="Texture2D" uid="uid://dk3reocq5hu06" path="res://assets/burger_bottom.png" id="5_idk3d"]
[ext_resource type="PackedScene" uid="uid://dihj100cnjl0k" path="res://scenes/food_items.tscn" id="7_nrphu"]
[ext_resource type="PackedScene" uid="uid://cq5iup5ixetmj" path="res://scenes/game_sounds.tscn" id="8_3hd0t"]
[ext_resource type="AudioStream" uid="uid://uvv4kxrpoxco" path="res://assets/gameover.wav" id="9_dcsk2"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_b7sgk"]
size = Vector2(134, 24)

[node name="Game" type="Node2D"]
script = ExtResource("1_8qj7s")

[node name="Background" parent="." instance=ExtResource("2_15gsg")]

[node name="ScoreLabel" parent="." instance=ExtResource("4_03t58")]
offset_right = 121.0
offset_bottom = 48.0

[node name="Player" type="CharacterBody2D" parent="."]
top_level = true
script = ExtResource("4_4gk1h")

[node name="Sprite2D" type="Sprite2D" parent="Player"]
texture = ExtResource("5_idk3d")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
position = Vector2(0, -8)
shape = SubResource("RectangleShape2D_b7sgk")

[node name="Timer" type="Timer" parent="."]

[node name="ButtonContainer" type="Panel" parent="."]
self_modulate = Color(1, 1, 1, 0)
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("5_4pbax")

[node name="Left" type="Button" parent="."]
top_level = true
offset_right = 100.0
offset_bottom = 100.0
text = "LEFT"
icon_alignment = 1

[node name="Right" type="Button" parent="."]
top_level = true
offset_right = 100.0
offset_bottom = 100.0
text = "RIGHT"

[node name="FoodItems" parent="." instance=ExtResource("7_nrphu")]
position = Vector2(1, -176)

[node name="ItemCollect" parent="." instance=ExtResource("8_3hd0t")]
pitch_scale = 2.0
autoplay = false

[node name="BrownPoo" parent="." instance=ExtResource("8_3hd0t")]
stream = ExtResource("9_dcsk2")
autoplay = false

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="pressed" from="Left" to="Player" method="_on_left_pressed"]
[connection signal="pressed" from="Right" to="Player" method="_on_right_pressed"]
